# switchemby

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
app/: CMakeLists.txt
app/include/activity/: login_activity.hpp  main_activity.hpp  player_activity.hpp  server_list.hpp
app/include/api/: emby.hpp  http.hpp
app/include/api/emby/: auth.hpp  library.hpp  playback.hpp  transcode.hpp
app/include/models/: episode.hpp  media_item.hpp  movie.hpp  playback_info.hpp  series.hpp  server.hpp  user.hpp
app/include/player/: mpv_core.hpp  playback_state.hpp  subtitle_manager.hpp  video_player.hpp
app/include/tab/: home_tab.hpp  library_tab.hpp  search_tab.hpp  settings_tab.hpp
app/include/utils/: cache.hpp  config.hpp  image_loader.hpp  logger.hpp  string_utils.hpp  time_utils.hpp
app/include/view/: audio_track_selector.hpp  detail_view.hpp  media_card.hpp  media_grid.hpp  player_controls.hpp  quality_selector.hpp  subtitle_selector.hpp
app/resources/i18n/: en-US.json  zh-CN.json
app/resources/themes/: dark.json  default.json
app/src/: main.cpp
app/src/activity/: login_activity.cpp  main_activity.cpp  player_activity.cpp  server_list.cpp
app/src/api/: emby.cpp  http.cpp
app/src/api/emby/: auth.cpp  library.cpp  playback.cpp  transcode.cpp
app/src/models/: media_item.cpp  server.cpp  user.cpp
app/src/player/: mpv_core.cpp  playback_state.cpp  subtitle_manager.cpp  video_player.cpp
app/src/tab/: home_tab.cpp  library_tab.cpp  search_tab.cpp  settings_tab.cpp
app/src/utils/: cache.cpp  config.cpp  image_loader.cpp  logger.cpp  string_utils.cpp  time_utils.cpp
app/src/view/: audio_track_selector.cpp  detail_view.cpp  media_card.cpp  media_grid.cpp  player_controls.cpp  quality_selector.cpp  subtitle_selector.cpp
